fix bug preventing panels behaving as expected on mobile displays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,10 +164,7 @@
 
 .sidebox {
     height: 380px;
-    color: blue;
-    border: 2px solid red;
-    position: relative;
-    border-radius: 5px;
+    
 
 }
 
